[gd_scene load_steps=9 format=3 uid="uid://lh7y6bfbl0i3"]

[ext_resource type="Script" path="res://scenes/towers/red_1_tower.gd" id="1_il3db"]
[ext_resource type="Texture2D" uid="uid://d4nrb7gbcj8xo" path="res://assets/images/towers/range_circle_edge_colored.png" id="2_amgkt"]
[ext_resource type="Texture2D" uid="uid://dyfd5aekx8jgm" path="res://assets/images/towers/r1 50.png" id="2_wh1de"]
[ext_resource type="AudioStream" uid="uid://b473sb6cq7tf3" path="res://assets/audio/effects/jump.wav" id="4_x34ur"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ku21i"]
radius = 25.0

[sub_resource type="Animation" id="Animation_8aowm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Beam:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beam:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beam:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Beam:width")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="Animation" id="Animation_wp6ed"]
resource_name = "fire"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beam:modulate.a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 1, 0, 0), 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Beam:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.980392, 0, 0, 0), Color(0, 1, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beam:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Beam:width")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [1.0, 5.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ayckp"]
_data = {
"RESET": SubResource("Animation_8aowm"),
"fire": SubResource("Animation_wp6ed")
}

[node name="Red1Tower" type="Node2D"]
script = ExtResource("1_il3db")
type = "Red 1"
cost = 200
cost_per_level = 100
base_damage_per_shot = 110
damage_per_level = 49
shot_delay_in_ms = 500
base_range_in_pixels = 320
range_per_level = 16
allowed_targeting_strategies = Array[int]([5])
targeting_strategy = 5
purpose = "Area of Effect."

[node name="RangeSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_amgkt")

[node name="TowerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_wh1de")

[node name="RangeArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="RangeCollider" type="CollisionShape2D" parent="RangeArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_ku21i")

[node name="Beam" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(0, 0, 100, 100)
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="FireAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ayckp")
}

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_x34ur")
pitch_scale = 5.0

[node name="ShotTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="ShotVisibilityTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.25
one_shot = true

[node name="Shots" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="ShotVisibilityTimer" to="." method="_on_shot_visibility_timer_timeout"]
